--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -13,6 +13,11 @@ body {
     background-color: #074173;
     padding: 20px 40px;
     height: 45px;
+    justify-content: space-between; 
+}
+
+.logo {
+    flex-shrink: 0;
 }
 
 .logo img {
@@ -22,39 +27,47 @@ body {
 }
 
 .search-container {
-    display: flex;
-    align-items: center;
     flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    margin: 0 20px;
 }
 
-.search-container input {
+.search-container form {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.search-container form input {
     padding: 10px;
     font-size: 1.5em;
     font-style: italic;
     border: none;
-    border-radius: 5px;
-    width: 100%;
-    text-align: center;
+    border-radius: 5px 0 0 5px;
+    text-align: left;
+    flex-grow: 1;
 }
 
-.search-container button {
-    padding: 12px 20px;
-    margin-left: 10px;
+.search-container form button {
+    padding: 10px 20px;
     background-color: #1679AB;
     color: white;
     border: none;
     font-size: 1.5em;
-    border-radius: 5px;
+    border-radius: 0 5px 5px 0;
     cursor: pointer;
 }
 
-.search-container button:hover {
-    background-color: rgba(255,255,255,0.5);
+.search-container form button:hover {
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .nav-links {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
+    flex-shrink: 0;
 }
 
 .nav-links a,
@@ -127,7 +140,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #333;
+    background-color: #333; 
     position: absolute;
     width: 100%;
     top: 60px;
@@ -255,15 +268,21 @@ body {
     }
 
     .three-column-section {
+        display: flex;
         flex-direction: column;
         align-items: center;
         margin-bottom: 15%;
     }
     
     .column {
-        flex: 1 1 100%; 
+        flex: 1;
         max-width: 90%; 
+        width: 100%; 
+        box-sizing: border-box; 
+        margin-bottom: 15px;
     }
 }
+
+
 
 
