--- a/public/assets/css/detail.css
+++ b/public/assets/css/detail.css
@@ -13,6 +13,11 @@ body {
     background-color: #074173;
     padding: 20px 40px;
     height: 45px;
+    justify-content: space-between; 
+}
+
+.logo {
+    flex-shrink: 0; 
 }
 
 .logo img {
@@ -22,39 +27,47 @@ body {
 }
 
 .search-container {
+    flex-grow: 1; 
     display: flex;
-    align-items: center;
-    flex-grow: 1;
+    justify-content: center;
+    margin: 0 20px; 
 }
 
-.search-container input {
+.search-container form {
+    display: flex;
+    align-items: center;
+    width: 100%; 
+}
+
+.search-container form input {
     padding: 10px;
     font-size: 1.5em;
     font-style: italic;
     border: none;
-    border-radius: 5px;
-    width: 100%;
-    text-align: center;
+    border-radius: 5px 0 0 5px; 
+    text-align: left; 
+    flex-grow: 1; 
 }
 
-.search-container button {
-    padding: 12px 20px;
-    margin-left: 10px;
+.search-container form button {
+    padding: 10px 20px;
     background-color: #1679AB;
     color: white;
     border: none;
     font-size: 1.5em;
-    border-radius: 5px;
+    border-radius: 0 5px 5px 0; 
     cursor: pointer;
 }
 
-.search-container button:hover {
-    background-color: rgba(255,255,255,0.5);
+.search-container form button:hover {
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .nav-links {
     display: flex;
     align-items: center;
+    justify-content: flex-end; 
+    flex-shrink: 0; 
 }
 
 .nav-links a,
@@ -127,10 +140,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #333;
+    background-color: #333; 
     position: absolute;
     width: 100%;
-    top: 60px; 
+    top: 60px;
     left: 0;
     padding-top: 20px; 
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -151,6 +164,7 @@ body {
     background-color: #f9f9f9; 
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    margin-bottom: 30px;
 }
 
 /* Column for the image */
@@ -190,10 +204,13 @@ body {
     text-align: left;
 }
 
+.link {
+    color: blue;
+}
 
 /* Footer */
 .footer {
-    position: fixed;
+    position: relative;
     background-color: #074173;
     color: white;
     text-align: center;
@@ -201,6 +218,7 @@ body {
     width: 100%;
     height: 50px;
     padding: 2px;
+    margin-top: 30px;
 }
 
 /* Responsive styles */
@@ -269,4 +287,15 @@ body {
         align-items: center;
     }
     
+    .footer {
+        position: absolute;
+        background-color: #074173;
+        color: white;
+        text-align: center;
+        bottom: 0;
+        width: 100%;
+        height: 50px;
+        padding: 2px;
+    }
 }
+
