--- a/public/assets/css/searchresults.css
+++ b/public/assets/css/searchresults.css
@@ -17,7 +17,7 @@ body {
 }
 
 .logo {
-    flex-shrink: 0;
+    flex-shrink: 0; 
 }
 
 .logo img {
@@ -27,7 +27,7 @@ body {
 }
 
 .search-container {
-    flex-grow: 1;
+    flex-grow: 1; 
     display: flex;
     justify-content: center; 
     margin: 0 20px; 
@@ -46,7 +46,7 @@ body {
     border: none;
     border-radius: 5px 0 0 5px; 
     text-align: left; 
-    flex-grow: 1; 
+    flex-grow: 1;
 }
 
 .search-container form button {
@@ -166,48 +166,53 @@ body {
     object-fit: cover;
 }
 
-/* Card Container and Card Styles */
+/* Card Container */
 .card-container {
+    position: relative;
+    left: 0;
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
+    justify-content: flex-start;
+    margin: 30px auto;
+    margin-bottom: 5%;
 }
 
+/* Card */
 .card {
+    flex: 1 1 calc(25% - 30px);
+    max-width: calc(25% - 30px);
     background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
     overflow: hidden;
-    margin: 10px;
-    flex: 1 1 calc(25% - 40px); 
-    max-width: calc(25% - 40px); 
-    transition: transform 0.3s ease;
-    text-align: center;
-    margin-bottom: 4%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    margin: 15px; 
+    transition: transform 0.3s ease; 
 }
 
 .card:hover {
-    transform: translateY(-10px); 
+    transform: translateY(-10px);
 }
 
 .card img {
+    display: block;
     width: 100%;
     height: auto;
+    object-fit: cover;
 }
 
 .card-content {
-    padding: 15px;
+    padding: 30px;
 }
 
 .card-content h2 {
-    margin: 0;
-    font-size: 1.5em;
+    text-align: center;
+    margin-top: 0;
 }
 
 /* Footer */
 .footer {
-    position: relative;
+    position: fixed;
     background-color: #074173;
     color: white;
     text-align: center;
@@ -282,7 +287,7 @@ body {
     }
 
     .card-container {
-        display: flex; 
+        display: flex;
         flex-direction: column; 
         align-items: center;
         margin-bottom: 5%;
