--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -8,11 +8,14 @@ body {
 }
 
 .navbar {
+    position: fixed;
     display: flex;
     align-items: center;
     background-color: #074173;
     padding: 20px 40px;
     height: 45px;
+    width: 97%;
+    top: 0;
     justify-content: space-between; 
 }
 
@@ -159,6 +162,7 @@ body {
 .title-section {
     text-align: center;
     margin: 20px 0;
+    margin-top: 8%;
 }
 
 .title-section h1 {
@@ -188,7 +192,7 @@ body {
 
 .three-column-section .column img {
     width: 100%;
-    height: auto;
+    height: 400px; /* Fixed height to ensure all images are the same size */
     border-radius: 10px;
     object-fit: cover;
     margin-bottom: 10px;
@@ -206,7 +210,7 @@ body {
 
 /* Footer */
 .footer {
-    position: fixed;
+    position: flex;
     background-color: #074173;
     color: white;
     text-align: center;
