--- a/public/assets/css/offlinepage.css
+++ b/public/assets/css/offlinepage.css
@@ -8,14 +8,17 @@ body {
 }
 
 .navbar {
+    position:fixed;
     display: flex;
     align-items: center;
     background-color: #074173;
     padding: 20px 40px;
     height: 45px;
+    width: 97%;
+    top: 0;
     justify-content: space-between; 
+    z-index: 1000;
 }
-
 .logo {
     flex-shrink: 0;
 }
@@ -163,7 +166,9 @@ body {
     display: flex;
     flex-wrap: wrap; 
     justify-content: flex-start; 
-    margin: 30px auto;
+    margin: 30px auto; 
+    margin-top: 8%;
+    margin-bottom: 5%;
     margin-bottom: 5%; 
 }
 
@@ -186,8 +191,10 @@ body {
 .card img {
     display: block;
     width: 100%;
-    height: auto; 
-    object-fit: cover; 
+    height: 270px; /* Fixed height to ensure all images are the same size */
+    border-radius: 10px;
+    object-fit: cover;
+    margin-bottom: 10px; 
 }
 
 .card-content {
